all pages updated

--- a/contact.html
+++ b/contact.html
@@ -345,7 +345,7 @@
             <div class="row gx-24 align-items-end">
                <div class="col-lg-6">
                   <div class="tp-breadcrumb-med-spacing-2 p-relative z-index-10" data-anime='{"el": "childs", "translateY": [15, 0], "perspective": [1200,1200], "scale": [1.05, 1], "rotateX": [30, 0], "opacity": [0,1], "duration": 800, "delay": 100, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                     <h2 class="fw-600 fs-50 fs-sm-40 ls-m-4 tp-ff-poppins tp-text-common-black-4">Book appointment</h2>
+                     <h2 class="fw-600 fs-50 fs-sm-40 ls-m-4 tp-ff-poppins tp-text-common-black-4">Register Here</h2>
                   </div>
                </div>
                <div class="col-lg-6">
