--- a/team.html
+++ b/team.html
@@ -360,7 +360,7 @@
       <!-- breadcrumb-area-end -->
 
       <!-- tp-team-details-area-start -->
-      <div class="tp-team-details pb-95 pt-140 p-relative">
+      <!-- <div class="tp-team-details pb-95 pt-140 p-relative">
          <div class="container-1230 container">
             <div class="row gx-24">
                <div class="col-lg-6 mb-30" data-anime='{ "translateX": [-50, 0], "opacity": [0,1], "duration": 1200, "delay": 0, "staggervalue": 150, "easing": "easeOutQuad" }'>
@@ -440,7 +440,7 @@
                </div>
             </div>
          </div>
-      </div>
+      </div> -->
       <!-- tp-team-details-area-end -->
 
       <!-- tp-team-area-start -->
@@ -448,8 +448,8 @@
          <div class="container-1230 container">
             <div class="row gx-24 align-items-end mb-25">
                <div class="col-lg-12">
-                  <div class="tp-work-title-wrap mb-25 text-center" data-anime='{"el": "childs", "translateY": [15, 0], "perspective": [1200,1200], "scale": [1.05, 1], "rotateX": [30, 0], "opacity": [0,1], "duration": 800, "delay": 100, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                     <h2 class="tp-ff-poppins tp-text-common-black-4 fs-50 fs-md-45 fw-600 ls-m-2 lh-110-per">Meet with our doctor</h2>
+                  <div class=" mt-50 tp-work-title-wrap mb-25 text-center" data-anime='{"el": "childs", "translateY": [15, 0], "perspective": [1200,1200], "scale": [1.05, 1], "rotateX": [30, 0], "opacity": [0,1], "duration": 800, "delay": 100, "staggervalue": 300, "easing": "easeOutQuad" }'>
+                     <h2 class="tp-ff-poppins tp-text-common-black-4 fs-50 fs-md-45 fw-600 ls-m-2 lh-110-per"> Commette Members</h2>
                   </div>
                </div>
             </div>
