--- a/appointment.html
+++ b/appointment.html
@@ -345,12 +345,12 @@
             <div class="row gx-24 align-items-end">
                <div class="col-lg-6">
                   <div class="tp-breadcrumb-med-spacing-2" data-anime='{"el": "childs", "translateY": [15, 0], "perspective": [1200,1200], "scale": [1.05, 1], "rotateX": [30, 0], "opacity": [0,1], "duration": 800, "delay": 100, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                     <h2 class="fw-600 fs-50 fs-sm-40 ls-m-4 tp-ff-poppins tp-text-common-black-4">Book appointment</h2>
+                     <h2 class="fw-600 fs-50 fs-sm-40 ls-m-4 tp-ff-poppins tp-text-common-black-4">Registration</h2>
                   </div>
                </div>
                <div class="col-lg-6">
                   <div class="tp-breadcrumb-med-thumb-4 text-end">
-                     <img data-parallax='{"y": 150, "smoothness": 20}' src="../assets/img/medical/bradcrumb/thumb-4.png" alt="">
+                     <img data-parallax='{"y": 150, "smoothness": 20}' src="../assets/img/medical/bradcrumb/thumb-2.png" alt="">
                   </div>
                </div>
             </div>
@@ -359,7 +359,7 @@
       <!-- breadcrumb-area-end -->
 
       <!-- tp-service-area-start -->
-      <div class="tp-service-area pt-120 pb-80">
+      <!-- <div class="tp-service-area pt-120 pb-80">
          <div class="container container-1230">
             <div class="row gx-24 align-items-center">
                <div class="col-xl-7 col-lg-6">
@@ -490,7 +490,7 @@
                </div>
             </div>
          </div>
-      </div>
+      </div> -->
       <!-- tp-service-area-end -->
 
       <!-- tp-apoinment-form-area-start -->
@@ -499,7 +499,7 @@
             <div class="row gx-24">
                <div class="col-lg-12">
                   <div class="tp-apoinment-med-title text-center pt-135" data-anime='{"el": "childs", "translateY": [15, 0], "perspective": [1200,1200], "scale": [1.05, 1], "rotateX": [30, 0], "opacity": [0,1], "duration": 800, "delay": 100, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                     <h2 class="tp-ff-poppins fs-50 fs-xs-35 ls-m-2 tp-text-common-black-4 mb-50">Book your appointment</h2>
+                     <h2 class="tp-ff-poppins fs-50 fs-xs-35 ls-m-2 tp-text-common-black-4 mb-50">Register Here</h2>
                   </div>
                </div>
                <div class="col-lg-7"  data-anime='{ "translateX": [-50, 0], "opacity": [0,1], "duration": 1200, "delay": 0, "staggervalue": 150, "easing": "easeOutQuad" }'>
@@ -507,10 +507,10 @@
                      <form action="#">
                         <div class="row gx-24 align-items-center">
                            <div class="col-lg-6 col-md-6">
-                              <input class="input mb-25" type="text" placeholder="Patient’s name">
+                              <input class="input mb-25" type="text" placeholder="Full Name">
                            </div>
                            <div class="col-lg-6 col-md-6">
-                              <input class="input mb-25" type="email" placeholder="Patient’s email">
+                              <input class="input mb-25" type="email" placeholder="Email">
                            </div>
                            <div class="date-icon p-relative col-lg-6 col-md-6">
                               <input class="form-control input mb-25" type="date" value="2024-11-12" min="2024-11-12" max="2099-12-31" aria-label="date"> 
@@ -520,12 +520,12 @@
                           </div>
                            <div class="col-lg-12">
                               <select class="select mb-25" name="subject">
-                                 <option value="1">Select doctor</option>
-                                 <option value="Pediatrician - Dr. Bryan jonhson">Pediatrician - Dr. Bryan jonhson</option>
-                                 <option value="Cardiology - Dr. Jemmy watson">Cardiology - Dr. Jemmy watson</option>
-                                 <option value="Neurology - Dr. Jeremy dupont">Neurology - Dr. Jeremy dupont</option>
-                                 <option value="Neurology - Dr. Jeremy dupont">Orthopedics - Dr. Evan thomson</option>
-                                 <option value="Neurology - Dr. Jeremy dupont">Optometrists - Dr. Shoko mugikura</option>
+                                 <option value="1">Select Your Standard</option>
+                                 <option value="Pediatrician - Dr. Bryan jonhson">First Year</option>
+                                 <option value="Cardiology - Dr. Jemmy watson">Second Year</option>
+                                 <option value="Neurology - Dr. Jeremy dupont">Third Year</option>
+                                 <option value="Neurology - Dr. Jeremy dupont">Fourth Year</option>
+                                
                               </select>
                            </div>
                            <div class="col-12">
@@ -541,7 +541,7 @@
                                              <path d="M4.52051 7.00002L6.17134 8.65085L9.47884 5.34918" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                                           </svg>
                                        </span>
-                                       <span class="btn-double-text" data-text="Book Appointment">Book Appointment</span>
+                                       <span class="btn-double-text" data-text="Get QR Code">Get QR Code</span>
                                     </span>
                                  </button>
                               </div>
