--- a/index.html
+++ b/index.html
@@ -159,148 +159,13 @@
                      <div class="tp-main-menu tp-main-menu-med d-none d-xl-block">
                         <nav class="tp-mobile-menu-active">
                            <ul>
-                              <li class="menu-static">
-                                 <a class="active" href="index.html">Demo</a>
-                                 <div class="tp-submenu submenu tp-main-mega-menu">
-                                    <div class="tp-menu-fullwidth">
-                                       <div class="tp-homemenu-wrapper">
-                                          <div class="row gx-24 row-cols-xl-5 row-cols-md-2 row-cols-2">
-                                             <div class="col homemenu">
-                                                <div class="homemenu-thumb-wrap mb-20">
-                                                   <div class="homemenu-thumb fix">
-                                                      <a href="index.html"><img src="../assets/img/menu/demo.jpg" alt=""></a>
-                                                   </div>
-                                                </div>
-                                                <div class="homemenu-content text-center">
-                                                   <h4 class="homemenu-title">
-                                                      <a href="index.html">Medical</a>
-                                                   </h4>
-                                                </div>
-                                             </div>
-                                             <div class="col homemenu">
-                                                <div class="homemenu-thumb-wrap mb-20">
-                                                   <div class="homemenu-thumb fix">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/corporate/index.html"><img src="../assets/img/menu/demo-2.jpg" alt=""></a>
-                                                   </div>
-                                                </div>
-                                                <div class="homemenu-content text-center">
-                                                   <h4 class="homemenu-title">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/corporate/index.html">Corporate</a>
-                                                   </h4>
-                                                </div>
-                                             </div>
-                                             <div class="col homemenu">
-                                                <div class="homemenu-thumb-wrap mb-20">
-                                                   <div class="homemenu-thumb fix">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/beauti-salon/index.html"><img src="../assets/img/menu/demo-3.jpg" alt=""></a>
-                                                   </div>
-                                                </div>
-                                                <div class="homemenu-content text-center">
-                                                   <h4 class="homemenu-title">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/beauti-salon/index.html">Beauty salon</a>
-                                                   </h4>
-                                                </div>
-                                             </div>
-                                             <div class="col homemenu">
-                                                <div class="homemenu-thumb-wrap mb-20">
-                                                   <div class="homemenu-thumb fix">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/pizza/index.html"><img src="../assets/img/menu/demo-4.jpg" alt=""></a>
-                                                   </div>
-                                                </div>
-                                                <div class="homemenu-content text-center">
-                                                   <h4 class="homemenu-title">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/pizza/index.html">Pizza parlor</a>
-                                                   </h4>
-                                                </div>
-                                             </div>
-                                             <div class="col homemenu">
-                                                <div class="homemenu-thumb-wrap mb-20">
-                                                   <div class="homemenu-thumb fix">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/lawyer/index.html"><img src="../assets/img/menu/demo-5.jpg" alt=""></a>
-                                                   </div>
-                                                </div>
-                                                <div class="homemenu-content text-center">
-                                                   <h4 class="homemenu-title">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/lawyer/index.html">Lawyer</a>
-                                                   </h4>
-                                                </div>
-                                             </div>
-                                             <div class="col homemenu">
-                                                <div class="homemenu-thumb-wrap mb-20">
-                                                   <div class="homemenu-thumb fix">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/currency/index.html"><img  src="../assets/img/menu/demo-6.jpg" alt=""></a>
-                                                   </div>
-                                                </div>
-                                                <div class="homemenu-content text-center">
-                                                   <h4 class="homemenu-title">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/currency/index.html">Crypto Currency</a>
-                                                   </h4>
-                                                </div>
-                                             </div>
-                                             <div class="col homemenu">
-                                                <div class="homemenu-thumb-wrap mb-20">
-                                                   <div class="homemenu-thumb fix">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/charity/index.html"><img src="../assets/img/menu/demo-7.jpg" alt=""></a>
-                                                   </div>
-                                                </div>
-                                                <div class="homemenu-content text-center">
-                                                   <h4 class="homemenu-title">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/charity/index.html">Charity</a>
-                                                   </h4>
-                                                </div>
-                                             </div>
-                                             <div class="col homemenu">
-                                                <div class="homemenu-thumb-wrap mb-20">
-                                                   <div class="homemenu-thumb fix">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/it-solution/index.html"><img src="../assets/img/menu/demo-8.jpg" alt=""></a>
-                                                   </div>
-                                                </div>
-                                                <div class="homemenu-content text-center">
-                                                   <h4 class="homemenu-title">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/it-solution/index.html">IT Business</a>
-                                                   </h4>
-                                                </div>
-                                             </div>
-                                             <div class="col homemenu">
-                                                <div class="homemenu-thumb-wrap mb-20">
-                                                   <div class="homemenu-thumb fix">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/digital/index.html"><img src="../assets/img/menu/demo-9.jpg" alt=""></a>
-                                                   </div>
-                                                </div>
-                                                <div class="homemenu-content text-center">
-                                                   <h4 class="homemenu-title">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/digital/index.html">Digital Agency</a>
-                                                   </h4>
-                                                </div>
-                                             </div>
-                                             <div class="col homemenu">
-                                                <div class="homemenu-thumb-wrap mb-20">
-                                                   <div class="homemenu-thumb fix">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/portfolio-carousel/index.html"><img src="../assets/img/menu/demo-10.jpg" alt=""></a>
-                                                   </div>
-                                                </div>
-                                                <div class="homemenu-content text-center">
-                                                   <h4 class="homemenu-title">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/portfolio-carousel/index.html">Showcase Carousel</a>
-                                                   </h4>
-                                                </div>
-                                             </div>
-                                          </div>
-                                       </div>
-                                    </div>
-                                 </div>
-                              </li>
+                              <li><a href="#">Home</a></li>
                               <li><a href="about.html">About</a></li>
-                              <li><a href="treatments.html">Treatments</a></li>
-                              <li class="has-dropdown">
-                                 <a href="team.html">Doctors</a>
-                                 <ul class="tp-submenu submenu">
-                                    <li><a href="team.html">Our Doctors</a></li>
-                                    <li><a href="appointment.html">Appointment</a></li>
-                                 </ul>
-                              </li>
-                              <li><a href="timetable.html">Timetable</a></li>
-                              <li><a href="contact.html">Contact</a></li>
+                              <li><a href="contact.html">conference</a></li>
+                              <li><a href="team.html">comitee</a></li>
+                              <li><a href="about.html">side seeing</a></li>
+                              <li><a href="appointment.html">register </a></li>
+
                            </ul>
                         </nav>
                      </div>
@@ -347,8 +212,8 @@
                <div class="col-xl-5 col-lg-6">
                   <div class="tp-hero-med-content tp-hero-med-spacing"  data-anime='{ "el": "childs", "rotateX": [90, 0], "opacity": [0,1], "staggervalue": 150, "easing": "easeOutQuad" }'>
                      <h2 class="tp-ff-poppins fw-600 mb-25 fs-80 fs-xl-70 fs-xs-50 ls-m-4 tp-text-common-black-4 lh-1">
-                        Medical and clinic centre
-                        <span class="fw-500 tp-hero-med-text-underline lh-1">services</span>
+                      Ashramam Medical Conference Meet
+                        <!-- <span class="fw-500 tp-hero-med-text-underline lh-1">services</span> -->
                      </h2>
                      <p class="tp-text-grey-9 lh-26 tp-ff-roboto ls-0 mb-40">Chesterton, a writers of paradoxical stories, is the contrarian on
                         He speaks for the pig-headed and visionary alike.</p>
@@ -361,20 +226,10 @@
                                     <path d="M14.4133 3.76667V10.3C14.4133 11.2333 14.0133 11.5667 13.08 11.5667H12.4133C11.48 11.5667 11.08 11.2333 11.08 10.3V3.76667C11.08 2.83333 11.48 2.5 12.4133 2.5H13.08C14.0133 2.5 14.4133 2.83333 14.4133 3.76667Z" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                                  </svg>
                               </span>
-                              <span class="btn-double-text" data-text="Book an Appointment">Book an Appointment</span>
+                              <span class="btn-double-text" data-text="Register">Register</span>
                            </span>
                         </a>
-                        <a href="#" class="tp-btn-switch-text mb-15 btn-lg bg-hover-theme-1 p-relative tp-round-100 d-inline-block hover-text-white tp-bg-common-white tp-text-common-black-4 fw-500 tp-ff-poppins lh-26 ls-m-2">
-                           <span>
-                              <span class="mr-5">
-                                 <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M8.35334 13.6134H4.14001C2.03334 13.6134 1.33334 12.2134 1.33334 10.8067V5.19339C1.33334 3.08672 2.03334 2.38672 4.14001 2.38672H8.35334C10.46 2.38672 11.16 3.08672 11.16 5.19339V10.8067C11.16 12.9134 10.4533 13.6134 8.35334 13.6134Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                    <path d="M13.0133 11.3998L11.16 10.0998V5.89318L13.0133 4.59318C13.92 3.95984 14.6667 4.34651 14.6667 5.45984V10.5398C14.6667 11.6532 13.92 12.0398 13.0133 11.3998Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                 </svg>
-                              </span>
-                              <span class="btn-double-text" data-text="Video Call">Video Call</span>
-                           </span>
-                        </a>
+                     
                      </div>
                      <div class="d-flex flex-wrap mb-30">
                         <span class="tp-ff-poppins mr-45 mb-10 fw-500 ls-m-2 tp-text-common-black-2 d-flex align-items-end">
@@ -795,7 +650,7 @@
                               <path d="M4.52083 6.99995L6.17166 8.65079L9.47916 5.34912" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                            </svg>
                         </span>
-                        <span class="btn-double-text" data-text="Book Appointment">Book Appointment</span>
+                        <span class="btn-double-text" data-text="Register Here">Register Here</span>
                      </span>
                   </button>
                </form>
