header part updated

--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,7 @@
    <header class="tp-header-height">
 
       <!-- header-area-start -->
-      <div id="tp-header-sticky" class="tp-header-area tp-header-md-space med-sticky-bg">
+      <div id="tp-header-sticky" class="tp-header-area tp-header-md-space tp-header-transparent med-sticky-bg">
          <div class="container container-1710">
             <div class="row align-items-center p-relative">
                <div class="col-xl-2 col-5">
@@ -159,148 +159,13 @@
                      <div class="tp-main-menu tp-main-menu-med d-none d-xl-block">
                         <nav class="tp-mobile-menu-active">
                            <ul>
-                              <li class="menu-static">
-                                 <a href="index.html">Demo</a>
-                                 <div class="tp-submenu submenu tp-main-mega-menu">
-                                    <div class="tp-menu-fullwidth">
-                                       <div class="tp-homemenu-wrapper">
-                                          <div class="row gx-24 row-cols-xl-5 row-cols-md-2 row-cols-2">
-                                             <div class="col homemenu">
-                                                <div class="homemenu-thumb-wrap mb-20">
-                                                   <div class="homemenu-thumb fix">
-                                                      <a href="index.html"><img src="../assets/img/menu/demo.jpg" alt=""></a>
-                                                   </div>
-                                                </div>
-                                                <div class="homemenu-content text-center">
-                                                   <h4 class="homemenu-title">
-                                                      <a href="index.html">Medical</a>
-                                                   </h4>
-                                                </div>
-                                             </div>
-                                             <div class="col homemenu">
-                                                <div class="homemenu-thumb-wrap mb-20">
-                                                   <div class="homemenu-thumb fix">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/corporate/index.html"><img src="../assets/img/menu/demo-2.jpg" alt=""></a>
-                                                   </div>
-                                                </div>
-                                                <div class="homemenu-content text-center">
-                                                   <h4 class="homemenu-title">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/corporate/index.html">Corporate</a>
-                                                   </h4>
-                                                </div>
-                                             </div>
-                                             <div class="col homemenu">
-                                                <div class="homemenu-thumb-wrap mb-20">
-                                                   <div class="homemenu-thumb fix">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/beauti-salon/index.html"><img src="../assets/img/menu/demo-3.jpg" alt=""></a>
-                                                   </div>
-                                                </div>
-                                                <div class="homemenu-content text-center">
-                                                   <h4 class="homemenu-title">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/beauti-salon/index.html">Beauty salon</a>
-                                                   </h4>
-                                                </div>
-                                             </div>
-                                             <div class="col homemenu">
-                                                <div class="homemenu-thumb-wrap mb-20">
-                                                   <div class="homemenu-thumb fix">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/pizza/index.html"><img src="../assets/img/menu/demo-4.jpg" alt=""></a>
-                                                   </div>
-                                                </div>
-                                                <div class="homemenu-content text-center">
-                                                   <h4 class="homemenu-title">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/pizza/index.html">Pizza parlor</a>
-                                                   </h4>
-                                                </div>
-                                             </div>
-                                             <div class="col homemenu">
-                                                <div class="homemenu-thumb-wrap mb-20">
-                                                   <div class="homemenu-thumb fix">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/lawyer/index.html"><img src="../assets/img/menu/demo-5.jpg" alt=""></a>
-                                                   </div>
-                                                </div>
-                                                <div class="homemenu-content text-center">
-                                                   <h4 class="homemenu-title">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/lawyer/index.html">Lawyer</a>
-                                                   </h4>
-                                                </div>
-                                             </div>
-                                             <div class="col homemenu">
-                                                <div class="homemenu-thumb-wrap mb-20">
-                                                   <div class="homemenu-thumb fix">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/currency/index.html"><img  src="../assets/img/menu/demo-6.jpg" alt=""></a>
-                                                   </div>
-                                                </div>
-                                                <div class="homemenu-content text-center">
-                                                   <h4 class="homemenu-title">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/currency/index.html">Crypto Currency</a>
-                                                   </h4>
-                                                </div>
-                                             </div>
-                                             <div class="col homemenu">
-                                                <div class="homemenu-thumb-wrap mb-20">
-                                                   <div class="homemenu-thumb fix">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/charity/index.html"><img src="../assets/img/menu/demo-7.jpg" alt=""></a>
-                                                   </div>
-                                                </div>
-                                                <div class="homemenu-content text-center">
-                                                   <h4 class="homemenu-title">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/charity/index.html">Charity</a>
-                                                   </h4>
-                                                </div>
-                                             </div>
-                                             <div class="col homemenu">
-                                                <div class="homemenu-thumb-wrap mb-20">
-                                                   <div class="homemenu-thumb fix">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/it-solution/index.html"><img src="../assets/img/menu/demo-8.jpg" alt=""></a>
-                                                   </div>
-                                                </div>
-                                                <div class="homemenu-content text-center">
-                                                   <h4 class="homemenu-title">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/it-solution/index.html">IT Business</a>
-                                                   </h4>
-                                                </div>
-                                             </div>
-                                             <div class="col homemenu">
-                                                <div class="homemenu-thumb-wrap mb-20">
-                                                   <div class="homemenu-thumb fix">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/digital/index.html"><img src="../assets/img/menu/demo-9.jpg" alt=""></a>
-                                                   </div>
-                                                </div>
-                                                <div class="homemenu-content text-center">
-                                                   <h4 class="homemenu-title">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/digital/index.html">Digital Agency</a>
-                                                   </h4>
-                                                </div>
-                                             </div>
-                                             <div class="col homemenu">
-                                                <div class="homemenu-thumb-wrap mb-20">
-                                                   <div class="homemenu-thumb fix">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/portfolio-carousel/index.html"><img src="../assets/img/menu/demo-10.jpg" alt=""></a>
-                                                   </div>
-                                                </div>
-                                                <div class="homemenu-content text-center">
-                                                   <h4 class="homemenu-title">
-                                                      <a href="https://html.hixstudio.net/uncut-pv/uncut/portfolio-carousel/index.html">Showcase Carousel</a>
-                                                   </h4>
-                                                </div>
-                                             </div>
-                                          </div>
-                                       </div>
-                                    </div>
-                                 </div>
-                              </li>
+                              <li><a href="index.html">Home</a></li>
                               <li><a href="about.html">About</a></li>
-                              <li><a href="treatments.html">Treatments</a></li>
-                              <li class="has-dropdown">
-                                 <a href="team.html">Doctors</a>
-                                 <ul class="tp-submenu submenu">
-                                    <li><a href="team.html">Our Doctors</a></li>
-                                    <li><a href="appointment.html">Appointment</a></li>
-                                 </ul>
-                              </li>
-                              <li><a href="timetable.html">Timetable</a></li>
-                              <li><a class="active" href="contact.html">Contact</a></li>
+                              <li><a href="contact.html">conference</a></li>
+                              <li><a href="team.html">comitee</a></li>
+                              <li><a href="about.html">side seeing</a></li>
+                              <li><a href="appointment.html">register </a></li>
+
                            </ul>
                         </nav>
                      </div>
