--- a/about.html
+++ b/about.html
@@ -146,7 +146,7 @@
    <header class="tp-header-height">
 
       <!-- header-area-start -->
-      <div id="tp-header-sticky" class="tp-header-area tp-header-md-space med-sticky-bg">
+      <div id="tp-header-sticky" class="tp-header-area tp-header-md-space tp-header-transparent med-sticky-bg">
          <div class="container container-1710">
             <div class="row align-items-center p-relative">
                <div class="col-xl-2 col-5">
@@ -159,18 +159,13 @@
                      <div class="tp-main-menu tp-main-menu-med d-none d-xl-block">
                         <nav class="tp-mobile-menu-active">
                            <ul>
-                             
-                              <li><a class="active" href="about.html">About</a></li>
-                              <li><a href="treatments.html">Treatments</a></li>
-                              <li class="has-dropdown">
-                                 <a href="team.html">Doctors</a>
-                                 <ul class="tp-submenu submenu">
-                                    <li><a href="team.html">Our Doctors</a></li>
-                                    <li><a href="appointment.html">Appointment</a></li>
-                                 </ul>
-                              </li>
-                              <li><a href="timetable.html">Timetable</a></li>
-                              <li><a href="contact.html">Contact</a></li>
+                              <li><a href="index.html">Home</a></li>
+                              <li><a href="about.html">About</a></li>
+                              <li><a href="contact.html">conference</a></li>
+                              <li><a href="team.html">comitee</a></li>
+                              <li><a href="about.html">side seeing</a></li>
+                              <li><a href="appointment.html">register </a></li>
+
                            </ul>
                         </nav>
                      </div>
