--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                <div class="col-xl-5 col-lg-6">
                   <div class="tp-hero-med-content tp-hero-med-spacing"  data-anime='{ "el": "childs", "rotateX": [90, 0], "opacity": [0,1], "staggervalue": 150, "easing": "easeOutQuad" }'>
                      <h2 class="tp-ff-poppins fw-600 mb-25 fs-80 fs-xl-70 fs-xs-50 ls-m-4 tp-text-common-black-4 lh-1">
-                      Ashramam Medical Conference Meet
+                        Asram medical conference meet-2025
                         <!-- <span class="fw-500 tp-hero-med-text-underline lh-1">services</span> -->
                      </h2>
                      <p class="tp-text-grey-9 lh-26 tp-ff-roboto ls-0 mb-40">Chesterton, a writers of paradoxical stories, is the contrarian on
