--- a/e-poster.html
+++ b/e-poster.html
@@ -435,215 +435,81 @@
     </header>
     <!-- header-area-end -->
 
-    <!-- main-area -->
-    <main>
-      <!-- td-breadcrumb-area-start -->
-      <div
-        class="td-breadcrumb-area td-breadcrumb-spacing bg-position"
-        data-background="assets/img/breadcrumb/breadcrumb.jpg"
-      >
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="td-breadcrumb-title-wrap">
-                <h2
-                  class="td-breadcrumb-title mb-10 wow td-animetion-left"
-                  data-wow-duration="1.5s"
-                  data-wow-delay="0.2s"
-                >
-                  About Conference
-                </h2>
-                <div
-                  class="td-breadcrumb-list wow td-animetion-right"
-                  data-wow-duration="1.5s"
-                  data-wow-delay="0.2s"
-                >
-                  <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li>
-                      <i class="fa-sharp fa-solid fa-angle-right fa-fw"></i>
-                    </li>
-                    <li class="pages">About conference</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- td-breadcrumb-area-end -->
-
-      <!-- td-about-area-start -->
-      <div class="td-about-area pt-140 pb-50 p-relative fix">
-        <h2 class="td-about-4-bigtitle td-team-bigtext">About</h2>
-        <div class="container">
-          <div class="row align-items-center">
-            <div class="col-xl-6 col-lg-12">
-              <div class="td-about-4-thumb-wrap mr-45 mb-30">
-                <div class="row align-items-end">
-                  <div class="col-lg-7 col-md-7 col-sm-7">
-                    <div class="td-about-4-thumb mb-25">
-                      <img
-                        class="w-100 thumb wow td-animetion-left"
-                        data-wow-duration="1.5s"
-                        data-wow-delay="0.2s"
-                        src="assets/img/about/about-details/thumb.jpg"
-                        alt=""
-                      />
-                    </div>
-                  </div>
-                  <div class="col-lg-5 col-md-5 col-sm-5">
-                    <div class="td-about-4-thumb text-center mb-25">
-                      <img
-                        class="mb-25 tdtranslateX2"
-                        src="assets/img/about/about-details/shape-2.png"
-                        alt=""
-                      />
-                      <img
-                        class="w-100 thumb wow td-animetion-right"
-                        data-wow-duration="1.5s"
-                        data-wow-delay="0.2s"
-                        src="assets/img/about/about-details/thumb-3.jpg"
-                        alt=""
-                      />
-                    </div>
-                  </div>
-                  <div class="col-lg-12">
-                    <div
-                      class="td-about-4-thumb-2 p-relative text-center pb-40 mb-25 pl-70 mr-70"
-                    >
-                      <img
-                        class="td-about-4-shape up-down"
-                        src="assets/img/about/about-details/shape.png"
-                        alt=""
-                      />
-                      <img
-                        class="w-100 thumb wow td-animetion-top"
-                        data-wow-duration="1.5s"
-                        data-wow-delay="0.2s"
-                        src="assets/img/about/about-details/thumb-2.jpg"
-                        alt=""
-                      />
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-6 col-lg-9">
-              <div
-                class="td-about-3-content-wrap ml-20 mb-15 wow fadeInRight"
+    <!-- td-breadcrumb-area-start -->
+    <div
+      class="td-breadcrumb-area td-breadcrumb-spacing bg-position"
+      data-background="assets/img/breadcrumb/breadcrumb.jpg"
+    >
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="td-breadcrumb-title-wrap">
+              <h2
+                class="td-breadcrumb-title mb-10 wow td-animetion-left"
                 data-wow-duration="1.5s"
                 data-wow-delay="0.2s"
               >
-                <span
-                  class="td-section-subtitle td-section-subtitle-2 td-section-subtitle-3 mb-15"
-                  >About This Event</span
-                >
-                <h2 class="td-section-title mb-15">
-                  About AP MEDCON 2025 - Shaping the Future of Healthcare
-                </h2>
-                <p class="para para-2 mb-30">
-                  Welcome to AP MEDCON 2025, the premier medical conference
-                  hosted by ASRAM Hospital, dedicated to advancing healthcare
-                  through innovation, knowledge-sharing, and collaboration. This
-                  landmark event brings together leading medical professionals,
-                  researchers, and healthcare innovators to explore the latest
-                  advancements, address industry challenges, and inspire
-                  excellence in patient care. .
-                </p>
-                <div class="td-about-3-clients d-flex flex-wrap">
-                  <div class="mb-15 items mr-40 d-flex align-items-center">
-                    <span class="mb-10 mr-15 icon">
-                      <i class="flaticon-meeting"></i>
-                    </span>
-                    <h5 class="title">
-                      500+ people’s<br />
-                      In Person Meet-up
-                    </h5>
-                  </div>
-                  <div class="mb-15 items d-flex align-items-center">
-                    <span class="mb-10 mr-15 icon">
-                      <i class="flaticon-handshake"></i>
-                    </span>
-                    <h5 class="title">
-                      Connect with<br />
-                      medical technology
-                    </h5>
-                  </div>
-                </div>
-                <p class="para mb-40">
-                  With engaging keynote sessions, interactive panel discussions,
-                  and valuable networking opportunities, AP MEDCON 2025 serves
-                  as a dynamic platform for driving impactful change in the
-                  healthcare sector. Join us as we come together to shape the
-                  future of medicine, one conversation at a time
-                </p>
-                <div class="td-about-3-btn d-flex align-items-center">
-                  <a
-                    class="td-btn td-btn-3-squre mb-15 td-left-right text3 mr-25"
-                    href="https://www.asram.in/#/mcAboutUs"
-                  >
-                    <span class="mr10 td-text d-inline-block mr-5"
-                      >Know More</span
-                    >
-                    <span class="td-arrow-angle">
-                      <svg
-                        class="td-arrow-svg-top-right"
-                        width="13"
-                        height="14"
-                        viewBox="0 0 13 14"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="M0.943836 13.5C0.685616 13.5 0.45411 13.4021 0.276027 13.224C0.0979452 13.0459 0 12.8055 0 12.5562C0 12.3068 0.0979452 12.0664 0.276027 11.8884L9.76781 2.38767H2.02123C1.49589 2.38767 1.0774 1.96027 1.0774 1.44384C1.0774 0.927397 1.50479 0.5 2.03014 0.5H12.0562C12.1274 0.5 12.1986 0.508904 12.2788 0.526712L12.4034 0.562329L12.537 0.633562C12.5637 0.65137 12.5993 0.678082 12.626 0.69589C12.6973 0.749315 12.7507 0.80274 12.7952 0.856164C12.8219 0.891781 12.8575 0.927397 12.8842 0.989726L12.9555 1.1411L12.9822 1.22123C13 1.29247 13.0089 1.3726 13.0089 1.44384V11.4699C13.0089 11.9952 12.5815 12.4137 12.0651 12.4137C11.5486 12.4137 11.1212 11.9863 11.1212 11.4699V3.72329L1.62055 13.224C1.44247 13.4021 1.20205 13.5 0.943836 13.5Z"
-                          fill="white"
-                        />
-                        <path
-                          d="M0.943836 13.5C0.685616 13.5 0.45411 13.4021 0.276027 13.224C0.0979452 13.0459 0 12.8055 0 12.5562C0 12.3068 0.0979452 12.0664 0.276027 11.8884L9.76781 2.38767H2.02123C1.49589 2.38767 1.0774 1.96027 1.0774 1.44384C1.0774 0.927397 1.50479 0.5 2.03014 0.5H12.0562C12.1274 0.5 12.1986 0.508904 12.2788 0.526712L12.4034 0.562329L12.537 0.633562C12.5637 0.65137 12.5993 0.678082 12.626 0.69589C12.6973 0.749315 12.7507 0.80274 12.7952 0.856164C12.8219 0.891781 12.8575 0.927397 12.8842 0.989726L12.9555 1.1411L12.9822 1.22123C13 1.29247 13.0089 1.3726 13.0089 1.44384V11.4699C13.0089 11.9952 12.5815 12.4137 12.0651 12.4137C11.5486 12.4137 11.1212 11.9863 11.1212 11.4699V3.72329L1.62055 13.224C1.44247 13.4021 1.20205 13.5 0.943836 13.5Z"
-                          fill="white"
-                        />
-                      </svg>
-                    </span>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- td-about-area-end -->
-
-      <!-- td-cta-area-start -->
-      <div class="td-cta-area">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
+                E - Poster Presentation
+              </h2>
               <div
-                class="td-cta-2-wrap bg-position"
-                data-background="assets/img/cta/cta-bg.png"
+                class="td-breadcrumb-list wow td-animetion-right"
+                data-wow-duration="1.5s"
+                data-wow-delay="0.2s"
               >
-                <div class="row align-items-end">
-                  <div class="col-lg-5">
-                    <div class="td-cta-2-content mb-20">
-                      <span class="td-cta-2-subtitle d-inline-block mb-5"
-                        >Don’t Miss Our Future Updates!</span
-                      >
-                      <h2 class="td-cta-2-title">Get Registered Today!</h2>
-                    </div>
-                  </div>
-                  <div class="col-lg-7">
-                    <div class="td-cta-2-form mb-25"></div>
-                  </div>
-                </div>
+                <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li>
+                    <i class="fa-sharp fa-solid fa-angle-right fa-fw"></i>
+                  </li>
+                  <li class="pages">E - Poster Presentation</li>
+                </ul>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <!-- td-cta-area-end -->
-    </main>
-    <!-- main-area-end -->
+    </div>
+    <!-- td-breadcrumb-area-end -->
+
+    <!-- td-schedule-area-start -->
+    <div
+      class="td-schedule-2-area pt-140 pb-140 bg-position"
+      data-background="assets/img/about/bg.jpg"
+    >
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-xl-6 col-lg-8">
+            <div
+              class="td-schedule-2-title-wrap text-center mb-30 wow fadeInUp"
+              data-wow-duration="1.5s"
+              data-wow-delay="0.3s"
+            >
+              <span class="td-section-subtitle td-section-subtitle-2 mb-30"
+                ><a
+                  href="https://erauniversity.in/NCHPE-2024/public/assets/Guidelines%20for%20e-Poster%20Preparation,%20Submission%20and%20Presentation.pdf"
+                >
+                  Guidelines for e-Poster Preparation, Submission and
+                  Presentation
+                </a></span
+              >
+              <span class="td-section-subtitle td-section-subtitle-2 mb-30"
+                ><a
+                  href="https://erauniversity.in/NCHPE-2024/public/assets/NCHPE%2024%20_36x48.pdf"
+                  >Scientific Poster Template</a
+                ></span
+              >
+              <span class="td-section-subtitle td-section-subtitle-2 mb-30"
+                ><a
+                  href="https://erauniversity.in/NCHPE-2024/public/assets/Score%20Criteria%20for%20e-Poster%20and%20Presentation%20Evaluation.pdf"
+                  >Score Criteria for e-Poster and Presentation Evaluation</a
+                ></span
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- td-schedule-area-end -->
 
     <!-- footer-area-start -->
     <footer>
